# libtpc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CASManager.cpp  CASManager.h  CMakeLists.txt  DataStructures.cpp  DataStructures.h  Dockerfile  Dockerfile-tpc  Dockerfile_16.04  Dockerfile_18.04  Dockerfile_20.04  Doxyfile  IndexManager.cpp  IndexManager.h  README.md  TpcCommons.h  TpcIndexReader.cpp  TpcIndexReader.h  TpcIndexWriter.cpp  TpcIndexWriter.h  Utils.cpp  Utils.h  index.dox  popplerlab-21.11.0.tgz  reader.cpp  reader.h  textpressocore.cpp  textpressocore.h  writer.cpp  writer.h
cas-generators/: Stream2Tpcas.cpp  Stream2Tpcas.h
cas-generators/pdf2tpcas/: PdfInfo.cpp  TextElement.cpp
cas-generators/xml2tpcas/: ReadXml2Stream.cpp
docs/: Doxyfile  Makefile  conf.py  index.rst  make.bat
lucene-custom/: CaseSensitiveAnalyzer.cpp  CaseSensitiveAnalyzer.h  LazySelector.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
patches/: thesolution4podofoproblems.tgz
patches/uimacpp-2.4.0/: configure  configure.ac
patches/uimacpp-2.4.0/src/framework/uima/: strtools.hpp
tests/: reader_tests.cpp  test_casmanager.cpp  test_indexmanager.cpp  test_indexreader.cpp  test_indexwriter.cpp  test_textpressocore.cpp
tests/data/index/: subindex.config
tests/data/index/celegans_0/fulltext/: _0.cfs  _1.cfs  segments_3
tests/data/index/celegans_0/fulltext_cs/: _0.cfs  _1.cfs  segments_3
tests/data/index/celegans_0/sentence/: _0.cfs  _1.cfs  segments_3
tests/data/index/celegans_0/sentence_cs/: _0.cfs  _1.cfs  segments_3
tests/data/index/pmcoa_celegans_0/fulltext/: _0.cfs  _1.cfs  segments_3
tests/data/index/pmcoa_celegans_0/fulltext_cs/: _0.cfs  _1.cfs
tests/data/index/pmcoa_celegans_0/sentence/: _0.cfs  _1.cfs  segments_3
tests/data/index/pmcoa_celegans_0/sentence_cs/: _0.cfs  _1.cfs  segments_3
tests/data/single_cas_files/C. elegans/WBPaper00029298/: WBPaper00029298.bib
tests/data/single_cas_files/C. elegans/WBPaper00045564/: WBPaper00045564.bib
tests/data/single_cas_files/C. elegans/WBPaper00045697/: WBPaper00045697.bib
tests/data/tpcas/C. elegans/WBPaper00004263/: WBPaper00004263.bib
tests/data/tpcas/C. elegans/WBPaper00046156/: WBPaper00046156.bib
tests/data/tpcas/pmcoa_celegans/PLoS_One_2016_Jan_29_11(1)_e0147511/: pone.0147511.bib
tests/data/tpcas/pmcoa_celegans/Worm_2012_Oct_1_1(4)_202-206/: worm-1-202.bib
uima-annotators/: globaldefinitions.h  uimaglobaldefinitions.h
uima-annotators/TdTokenizer/: #TdTokenizer.cpp#  TdTokenizer.cpp  TdTokenizer.h  TpNode.cpp  textAndImageManager.cpp  textAndImageManager.h
uima-annotators/TdTokenizer/resources/descriptors/: TdTokenizer.xml  TdTokenizerTypeSystem.xml
uima-annotators/TpLexiconAnnotator/: AnnotationCounter.h  TpLexiconAnnotator.cpp  TpLexiconAnnotator.h  TpLexiconNode.h  TpLexiconTrie.cpp  TpLexiconTrie.h
uima-annotators/TpLexiconAnnotator/resources/descriptors/: TpLexiconAnnotator.xml  TpLexiconAnnotatorTypeSystem.xml  TpTokenizerTypeSystem.xml  TxTokenizerTypeSystem.xml
uima-annotators/TpLexiconAnnotator/resources/wordlists/: org.lex
uima-annotators/TpLexiconAnnotatorFromPg/: AllMyParents.cpp  AllMyParents.h  StopWords.h  TpLexiconAnnotatorFromPg.cpp  TpLexiconAnnotatorFromPg.h  TpLexiconNode.cpp  TpLexiconNode.h  TpLexiconTrie.cpp  TpLexiconTrie.h
uima-annotators/TpLexiconAnnotatorFromPg/resources/descriptors/: TdTokenizerTypeSystem.xml  TpLexiconAnnotatorFromPg.xml  TpLexiconAnnotatorFromPgFeatureSupplementals.xml  TpLexiconAnnotatorFromPgTypeSystem.xml  TpLexiconAnnotatorFromPgWithTmpTpontology.xml  TpTokenizerTypeSystem.xml  TxTokenizerTypeSystem.xml
uima-annotators/TpLsa/: LsaTp.cpp  LsaTp.h  SetsFromPairs.cpp  SetsFromPairs.h  TpCas2LsaToken.cpp  TpCas2LsaToken.h  main.cpp  redsvd.hpp  redsvdFile.cpp  util.cpp
uima-annotators/TpLsa/resources/: Latent semantic indexing - Wikipedia, the free encyclopedia.html  stopwords
uima-annotators/TpLsa/resources/Latent semantic indexing - Wikipedia, the free encyclopedia_files/: load.css  load.php  load_002.css
uima-annotators/TpTokenizer/: TpTokenizer.cpp  TpTokenizer.h  TpTrie.cpp
uima-annotators/TpTokenizer/resources/descriptors/: TpTokenizer.xml  TpTokenizerTypeSystem.xml
uima-annotators/Tpcas2TpCentral/: Tpcas2TpCentral.cpp  Tpcas2TpCentral.h
uima-annotators/TxTokenizer/: AnnotationCounter.cpp  TxTokenizer.cpp  TxTokenizer.h
uima-annotators/TxTokenizer/resources/descriptors/: TxTokenizer.xml  TxTokenizerTypeSystem.xml
uima-annotators/WriteFeatureDefsFromPg/: main.cpp
uima-annotators/shared_resources/descriptors/: Tpcas2Lindex.xml  Tpcas2TpCentral.xml
uima-custom-analyzers/Tpcas2Bib/: CASUtils.cpp  CASUtils.h  TpNode.cpp  Tpcas2Bib.cpp  Tpcas2Bib.h
uima-custom-analyzers/Tpcas2Bib4Nxml/: CASUtils.cpp  CASUtils.h  TpNode.h  TpTrie.cpp  TpTrie.h  Tpcas2Bib4Nxml.cpp  Tpcas2Bib4Nxml.h
uima-custom-analyzers/Tpcas2Lpp/: CASUtils.cpp  Tpcas2Lpp.cpp  Tpcas2Lpp.h  Utils.h
uima-custom-analyzers/Tpcas2SingleIndex/: CASUtils.cpp  CASUtils.h  Tpcas2SingleIndex.cpp  Tpcas2SingleIndex.h
